<package format="2">
  <name>realtime_tools</name>
  <version>2.14.1</version>
  <description>Contains a set of tools that can be used from a hard
    realtime thread, without breaking the realtime behavior.</description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <maintainer email="denis@stoglrobotics.de">Denis Štogl</maintainer>

  <license>3-Clause BSD</license>

  <url type="website">https://control.ros.org</url>
  <url type="bugtracker">https://github.com/ros-controls/realtime_tools/issues</url>
  <url type="repository">https://github.com/ros-controls/realtime_tools/</url>

  <author email="sglaser@willowgarage.com">Stuart Glaser</author>
  <author email="sloretz@openrobotics.org">Shane Loretz</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>

  <depend>libboost-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>libcap-dev</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>lifecycle_msgs</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
